{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 74,
  "lineage": "c0334ba7-acc1-90ed-fb3f-4423b78c8712",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "test-public-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/4b761aec-fced-4d7c-b322-b2d7455388b2/resourceGroups/test-resources/providers/Microsoft.Network/publicIPAddresses/test-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.228.194.40",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "test-public-ip",
            "resource_group_name": "test-resources",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "test-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4b761aec-fced-4d7c-b322-b2d7455388b2/resourceGroups/test-resources/providers/Microsoft.Network/networkInterfaces/test-nic",
            "internal_domain_name_suffix": "agx02owycjye3psftl4nq02hnd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4b761aec-fced-4d7c-b322-b2d7455388b2/resourceGroups/test-resources/providers/Microsoft.Network/publicIPAddresses/test-public-ip",
                "subnet_id": "/subscriptions/4b761aec-fced-4d7c-b322-b2d7455388b2/resourceGroups/test-resources/providers/Microsoft.Network/virtualNetworks/test-network/subnets/test-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-56-BF-ED",
            "name": "test-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "test-resources",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/4b761aec-fced-4d7c-b322-b2d7455388b2/resourceGroups/test-resources/providers/Microsoft.Compute/virtualMachines/test-vm"
          },
          "dependencies": [
            "azurerm_public_ip.test-public-ip",
            "azurerm_resource_group.test-rg",
            "azurerm_subnet.test-subnet",
            "azurerm_virtual_network.test-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "test-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4b761aec-fced-4d7c-b322-b2d7455388b2/resourceGroups/test-resources/providers/Microsoft.Network/networkSecurityGroups/test-sg",
            "location": "eastus",
            "name": "test-sg",
            "resource_group_name": "test-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "73.115.239.96/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "test-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/4b761aec-fced-4d7c-b322-b2d7455388b2/resourceGroups/test-resources/providers/Microsoft.Network/networkSecurityGroups/test-sg/securityRules/test-dev-rule",
            "name": "test-dev-rule",
            "network_security_group_name": "test-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "test-resources",
            "source_address_prefix": "73.115.239.96/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.test-sg",
            "azurerm_resource_group.test-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "test-public-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/4b761aec-fced-4d7c-b322-b2d7455388b2/resourceGroups/test-resources/providers/Microsoft.Network/publicIPAddresses/test-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.228.194.40",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "test-public-ip",
            "resource_group_name": "test-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.test-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "test-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4b761aec-fced-4d7c-b322-b2d7455388b2/resourceGroups/test-resources/providers/Microsoft.Network/virtualNetworks/test-network/subnets/test-subnet",
            "name": "test-subnet",
            "resource_group_name": "test-resources",
            "virtual_network_name": "test-network"
          },
          "dependencies": [
            "azurerm_resource_group.test-rg",
            "azurerm_virtual_network.test-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "test-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4b761aec-fced-4d7c-b322-b2d7455388b2/resourceGroups/test-resources/providers/Microsoft.Network/virtualNetworks/test-network/subnets/test-subnet",
            "network_security_group_id": "/subscriptions/4b761aec-fced-4d7c-b322-b2d7455388b2/resourceGroups/test-resources/providers/Microsoft.Network/networkSecurityGroups/test-sg",
            "subnet_id": "/subscriptions/4b761aec-fced-4d7c-b322-b2d7455388b2/resourceGroups/test-resources/providers/Microsoft.Network/virtualNetworks/test-network/subnets/test-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.test-sg",
            "azurerm_resource_group.test-rg",
            "azurerm_subnet.test-subnet",
            "azurerm_virtual_network.test-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "test-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3aaeaf01-12d8-4e70-be45-9afcd86b876b",
            "id": "/subscriptions/4b761aec-fced-4d7c-b322-b2d7455388b2/resourceGroups/test-resources/providers/Microsoft.Network/virtualNetworks/test-network",
            "location": "eastus",
            "name": "test-network",
            "resource_group_name": "test-resources",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/4b761aec-fced-4d7c-b322-b2d7455388b2/resourceGroups/test-resources/providers/Microsoft.Network/virtualNetworks/test-network/subnets/test-subnet",
                "name": "test-subnet",
                "security_group": "/subscriptions/4b761aec-fced-4d7c-b322-b2d7455388b2/resourceGroups/test-resources/providers/Microsoft.Network/networkSecurityGroups/test-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.test-rg"
          ]
        }
      ]
    }
  ]
}